[tool.poetry]
name = "hass-auth-header"
version = "0.1.0"
description = ""
authors = ["Jens Langhammer <jens.langhammer@beryju.org>"]
license = "GPL"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"

[tool.poetry.dev-dependencies]
homeassistant = "^2024.7"
pylint = "*"
black = "*"
isort = "*"

[tool.pylint.master]
disable = [
    "protected-access"
]

[tool.isort]
line_length = 100

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
